fixed navbar clipping

--- a/src/output.css
+++ b/src/output.css
@@ -1068,6 +1068,16 @@ video {
   }
 }
 
+@media (min-width: 768px) {
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+}
+
 @media (min-width: 1024px) {
   .lg\:pt-32 {
     padding-top: 8rem;
